# S02E01.server_v2

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  architect.xmind  docker-compose.yaml
config/: server.toml
migrations/2021-10-20-160504_users_table/: up.sql
src/: config.rs  main.rs  schema.rs  tests.rs
src/api/: error.rs  mod.rs  routes.rs
src/api/middleware/: role.rs
src/api/routes/: mod.rs
src/api/routes/private/: mod.rs  user.rs
src/api/routes/private/tests/: user_test.rs
src/api/routes/public/: auth.rs
src/api/routes/tests/: user_test.rs
src/api/user/: mod.rs
src/models/: mod.rs
src/models/user_models/: user.rs
src/server/: mod.rs
src/server/user/: mod.rs
src/server/user/user_tests/: mod.rs  user_handlers_test.rs
src/sql/: db.rs  errors.rs  mod.rs
src/sql/store/user/: mod.rs
src/sql/store/user_repository/: user.rs
src/sql/utils/: mod.rs
