[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.8", features = ["uuid", "r2d2", "postgres"] }
diesel_migrations = "1.4.0"
derive_more = "0.99.16"
actix-rt = "2.3.0"
toml = "0.5.8"

